trunk/Archive/0adb71375fe27f889c4e8fd55244bc70-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:28:34: error: conversion from 'ns::adl::ref' to non-scalar type 'main()::<anonymous struct>' requested
    struct {}_ = ns::id(ns::ref {});
                                  ^
